# pytest-dryrun

./: README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
pytest_assessor/: pytest_assessor.py
pytest_dryrun/: __init__.py  pytest_dryrun.py
tests/: __init__.py  conftest.py  test_functionality.py  test_thing.py
