[tool.poetry]
name = "pytest-assessor"
version = "0.1.0"
description = "A Pytest plugin to facilitate auto-marking using Pytest."
authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
readme = "README.md"
packages = [{include = "pytest_assessor"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
