[project]
name = "pytest-dryrun"
version = "1.0.2"
description = "A Pytest plugin to ignore tests during collection without reporting them in the test summary."
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">3.10"
dependencies = ["pytest (>=7.40, <10)"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Topic :: Education :: Testing",
    "Typing :: Typed",
]

[project.urls]
repository = "https://github.com/COMP1010UNSW/pytest-dryrun"
documentation = "https://github.com/COMP1010UNSW/pytest-dryrun#readme"
"Bug Tracker" = "https://github.com/COMP1010UNSW/pytest-dryrun/issues"

[project.entry-points.pytest11]
pytest-dryrun = "pytest_dryrun.pytest_dryrun"

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.uv]
# Exclude dependency releases newer than 1 week, in order to reduce supply-chain
# risk.
exclude-newer = "1 week"

[build-system]
requires = ["uv_build>=0.7.20,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pytest_dryrun"
module-root = ""

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
check_untyped_defs = true
files = ["pytest_dryrun", "tests"]

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'return NotImplemented',
    '@overload',
    'raise AssertionError',
    'raise NotImplementedError',
]

[tool.coverage.run]
branch = true
